# pypls

./: .gitignore  .goreleaser.yaml  NOTICE  README.md  go.mod  go.sum  main.go
.github/workflows/: vscode-extension.yml
clients/pypls-client/: README.md  pyproject.toml
clients/pypls-client/src/pypls_client/: __init__.py  __main__.py  _binary.py
cmd/: check.go  lsp.go  root.go  version.go  version_test.go
docs/: architecture.md  benchmarks.md  editors.md  getting-started.md  tutorial.md
editors/vscode/: .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
examples/basic/: README.md  clean.py  pyproject.toml  shapes.py
examples/benchmark/: README.md
examples/benchmark/scripts/: aggregate.py  config.sh  latency.sh  lib.sh  machine.sh  measure.py  memory.sh  run.sh  setup.sh
internal/analyzer/: analyzer.go  analyzer_test.go  cache_test.go  django_bench_test.go  incremental.go  incremental_test.go
internal/ast/: ast.go
internal/cache/: cache.go  cache_test.go
internal/checker/: checker.go  checker_test.go
internal/config/: config.go  config_test.go
internal/diagnostic/: diagnostic.go
internal/lexer/: lexer.go  lexer_test.go
internal/lsp/: completion.go  convert.go  integration_test.go  jsonrpc.go  protocol.go  server.go  server_test.go  watcher.go
internal/parser/: bench_test.go  parser.go  parser_test.go
internal/parser/testdata/: expressions.py  features.py
internal/token/: token.go
internal/types/: types.go
