[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypls-client"
version = "0.1.0"
description = "Installer and launcher for pypls, a fast Python type checker and language server."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Levi Chinecherem Chidi" }]
keywords = ["python", "type-checker", "language-server", "lsp", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Go-Python-Toolchain/pypls"
Source = "https://github.com/Go-Python-Toolchain/pypls"
Issues = "https://github.com/Go-Python-Toolchain/pypls/issues"

[project.scripts]
pypls = "pypls_client.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pypls_client"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md"]
